session getbyid, rate, report
